# tingcal

./: 2013.txt  2013.zodiac.txt  AGENTS.md  LICENSE  NOTES  README.md  pyproject.toml  session-ses_1f53.md  tingcal.py
src/tingcal/: __init__.py  __main__.py
